<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RadioGroup
        android:id="@+id/rg_grpup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/totle_size_height"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rg_text_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/rg_text_password"
            android:textSize="18dp"
            android:textColor="@color/black"

            android:checked="true"
            />

        <RadioButton
            android:id="@+id/rg_text_valadition"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/rg_text_valadition"
            android:textSize="18dp"
            android:textColor="@color/black"
            />

    </RadioGroup>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/totle_size_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"

            android:text="@string/input_phonenumber"
            android:textSize="18dp"
            android:textColor="@color/black"

            android:gravity="center|end"

            />

        <EditText
            android:id="@+id/et_input_phone"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"

            android:hint="@string/input_hint_phone"

            android:inputType="number"

            android:maxLength="11"

            android:paddingStart="15dp"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/totle_size_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/input_passwordnumber"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"

            android:text="@string/input_passwordnumber"
            android:textSize="18dp"
            android:textColor="@color/black"

            android:gravity="center|end"

            />


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/et_input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:hint="@string/input_hint_password"

                android:inputType="numberPassword"

                android:maxLength="6"

                android:paddingStart="15dp"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/intent_forgetpassword"

                android:layout_width="wrap_content"
                android:layout_height="45dp"

                android:layout_alignEnd="@id/et_input_password"

                android:text="@string/intent_forgetpassword"

                />



        </RelativeLayout>


    </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/totle_size_height"
    android:orientation="horizontal">


    <CheckBox
        android:id="@+id/remeber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/cb_text_remeberpassword"
        android:textColor="@color/black"

        android:layout_marginStart="15dp"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/xiochuan"
        android:layout_width="wrap_content"
        android:layout_height="45dp"


        android:text="小川"

        />

</LinearLayout>



    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"

        android:text="@string/button_text_login"
        />

</LinearLayout>